tests/machine/x/fs/go_auto.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/go_auto.fs(5,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(5,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(6,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(6,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(7,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(7,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(9,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(9,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(10,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(10,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(11,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(11,1): warning FS0058: Possible incorrect indentation: this token is offside of context started at position (4:1). Try indenting this token further or using standard formatting conventions.

/workspace/mochi/tests/machine/x/fs/go_auto.fs(9,15): error FS0039: The namespace or module 'testpkg' is not defined

/workspace/mochi/tests/machine/x/fs/go_auto.fs(10,15): error FS0039: The namespace or module 'testpkg' is not defined

/workspace/mochi/tests/machine/x/fs/go_auto.fs(11,15): error FS0039: The namespace or module 'testpkg' is not defined
