tests/machine/x/fs/go_auto.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:26:54Z
open System

module testpkg
let Add a b = a + b
let Pi = 3.14
let Answer = 42

printfn "%A" (testpkg.Add(2, 3))
printfn "%A" (testpkg.Pi)
printfn "%A" (testpkg.Answer)
